Attempt #2 at fixing overflow

--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -354,7 +354,7 @@ header {
         transition: max-height 0.6s cubic-bezier(0.5, 0, 0.5, 1); } }
 @media only screen and (max-width: 570px) {
   #bottom-nav div > a {
-    flex-basis: 85% !important; }
+    flex-basis: 83.5% !important; }
   #bottom-nav div > .expand {
     flex-basis: 15% !important;
     text-align: right; } }
