--- a/src/styles/scss/partials/_header.resp.scss
+++ b/src/styles/scss/partials/_header.resp.scss
@@ -252,7 +252,7 @@
     #bottom-nav {
         div {
             & > a { 
-                flex-basis: 85% !important;
+                flex-basis: 83.5% !important;
             }
             
             & > .expand {
